# web-stress-tools

./: Cargo.toml  Config.toml  README.md  UrlList.txt
src/: config.rs  html_helper.rs  main.rs  simple_browser.rs
