[package]
name = "web_stress_tools"
version = "0.6.1"
authors = ["Richard Straka <richard.straka@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Console app for generating synthetic web traffic for your web app to help with benchmarking and debuging of performance issues."
keywords = ["dev", "web", "stress", "tool", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
homepage = "https://github.com/THX81/web_stress_tools"
repository = "https://github.com/THX81/web_stress_tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary. By default on Linux and macOS, symbol information is included in the compiled .elf file.
opt-level = "z"  # Optimize for size. Cargo defaults its optimization level to 3 for release builds, which optimizes the binary for speed.
lto = true # LTO instructs the linker to optimize at the link stage. This can, for example, remove dead code and often times reduces binary size.
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations. By default 16 parallel codegen units for release builds.
panic = "abort" # Abort imediatelly without a message. 
# additional tips in https://github.com/johnthagen/min-sized-rust

[dependencies]
addr = "0.15.6"
clap = "4.3.11"
confy = "0.5.1"
console = "0.15.7"
#headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
indicatif = "0.17.5"
no_browser = "0.3.0"
rand = "0.8.5"
serde = "1.0.164"
serde_derive = "1.0.164"
url = "2.4.0"
